# Criminal-Database

./: CMakeLists.txt  acquisizioneSoggetto.c  acquisizioneSoggetto.h  caricaFile.c  caricaFile.h  confrontaSoggetti.c  confrontaSoggetti.h  controlloAcquisizioni.c  controlloAcquisizioni.h  eliminaSoggeto.c  eliminaSoggeto.h  generazioneSoggettoCasuale.c  generazioneSoggettoCasuale.h  main.c  menuUtente.c  menuUtente.h  salvaFile.c  salvaFile.h  stampaElenco.c  stampaElenco.h  strutture.c  strutture.h
